# PrivaVoz

./: .flutter-plugins-dependencies  .gitignore  BUILD.md  LICENSE  README.md  SPEC.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: build.yml
android/: gradlew  local.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/privavoz/app/: LlamaBridge.java  WhisperBridge.java
assets/models/: README.md
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/ffi/: llama_ffi.dart  whisper_ffi.dart
lib/core/services/: ai_service.dart  biometric_service.dart  encryption_service.dart  native_ai_channel.dart  recording_service.dart  service_locator.dart  subscription_service.dart
lib/core/theme/: app_theme.dart
lib/data/datasources/: database_helper.dart
lib/domain/entities/: recording.dart  transcription.dart
lib/presentation/blocs/auth/: auth_bloc.dart  auth_event.dart  auth_state.dart
lib/presentation/blocs/recording/: recording_bloc.dart  recording_event.dart  recording_state.dart
lib/presentation/blocs/subscription/: subscription_bloc.dart  subscription_event.dart  subscription_state.dart
lib/presentation/pages/: home_page.dart  library_page.dart  player_page.dart  settings_page.dart  splash_page.dart  subscription_page.dart
lib/presentation/widgets/: glass_card.dart  neon_button.dart  waveform_visualizer.dart
models/: README.md
scripts/: download_models.py  download_models.sh
(+1 files in other folders)
